--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ toolz = "^0.11.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.5b0"
+mypy = "^0.812"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
