Fix lint command

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,9 +21,5 @@ jobs:
           path: ~/.cache/pypoetry/virtualenvs
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
       - run: poetry install
-      - name: Lint
-        run: |
-          make lint
-      - name: Unit tests
-        run: |
-          make test
+      - run: poetry run make lint
+      - run: poetry run make test
