--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,3 +23,4 @@ jobs:
       - run: poetry install
       - run: poetry run make lint
       - run: poetry run make test
+      - run: poetry run make coverage_report
