--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,10 @@ isort = "^5.8.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+src_paths = ["dict2sql"]
+
+[tool.black]
+line-length = 120
